[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-model-analyzer"
version = "0.1.0"
authors = [
    {name = "Prasenjeet", email = "prasenjeett@example.com"},
]
description = "A comprehensive PyTorch model analysis tool"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["pytorch", "deep-learning", "model-analysis", "neural-networks"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.7.0",
    "numpy>=1.19.0",
    "graphviz>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.910",
    "flake8>=3.9",
]
docs = [
    "mkdocs>=1.2",
    "mkdocs-material>=8.0",
    "mkdocstrings[python]>=0.18",
]

[project.urls]
Homepage = "https://github.com/prasenjeett/torch-model-analyzer"
Documentation = "https://torch-model-analyzer.readthedocs.io"
Repository = "https://github.com/prasenjeett/torch-model-analyzer.git"
"Bug Tracker" = "https://github.com/prasenjeett/torch-model-analyzer/issues"